fix list border for dark mode

--- a/client/css/ui-list.css
+++ b/client/css/ui-list.css
@@ -34,7 +34,7 @@
 
 
 @media (prefers-color-scheme: dark) {
-  .ui-list > .contents {
+  .ui-list {
     border: solid 1px darkgray;
   }
 
